# Dynamic-Code-Analyzer

./: CMakeLists.txt  README.md
src/: main.cpp
src/analyzer/: Analyzer.cpp  Analyzer.h  Matrices.cpp  Matrices.h  Metrices.cpp  Metrices.h  Parser.cpp  Parser.h
src/tests/: test_analyzer.cpp  test_matrices.cpp
src/utiles/: FileManager.cpp  FileManager.h  Logger.cpp  Logger.h
